Update and rename ---------------------- (1).html to GTASA Definitive Edition.html

--- a/sigs/GTASA Definitive Edition.html
+++ b/sigs/GTASA Definitive Edition.html
@@ -10,7 +10,9 @@
 	}
 </style>
 <textarea id="t">
-
+X:	SanAndreas.exe+522C688
+Y:	SanAndreas.exe+522C688+4
+Z:	SanAndreas.exe+4EA9508
 </textarea>
 <script>
 	setTimeout(() => {//'--------- carregou')
