--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         ['JavaScript', 'Verifica Semelhança (Sistema de IA Simples)', 'js/verSemelhanca.html'],
         ['JavaScript', 'Criptografia e Descriptografia', 'js/cripto.html'],
 
-        ['Sigs', 'Titulo PHP 1', 'artigo1 PHP'],
+        ['Sigs', 'GTASA Definitive Edition', 'sigs/GTASA Definitive Edition.html'],
         ['Sigs', 'Titulo PHP 2', 'artigo2 PHP'],
         ['Sigs', 'Titulo PHP 3', 'artigo3 PHP'],
 
