--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
         ['JavaScript', 'Criptografia e Descriptografia', 'js/cripto.html'],
 
         ['Sigs', 'GTASA Definitive Edition', 'sigs/GTASA Definitive Edition.html'],
-        ['Sigs', 'Titulo PHP 2', 'artigo2 PHP'],
-        ['Sigs', 'Titulo PHP 3', 'artigo3 PHP'],
+        ['Sigs', 'The Forest', 'sigs/The Forest.html'], 
 
         ['Tutorial', 'Titulo Tutorial 1', 'artigo1 Tutorial'],
         ['Tutorial', 'Titulo Tutorial 2', 'artigo2 Tutorial'],
