--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
 
         ['Sigs', 'GTASA Definitive Edition', 'sigs/GTASA Definitive Edition.html'],
         ['Sigs', 'The Forest', 'sigs/The Forest.html'], 
+        ['Sigs', 'Outlast 2', 'sigs/Outlast2.html'], 
 
         ['Tutorial', 'Titulo Tutorial 1', 'artigo1 Tutorial'],
         ['Tutorial', 'Titulo Tutorial 2', 'artigo2 Tutorial'],
