--- a/sigs/Outlast2.html
+++ b/sigs/Outlast2.html
@@ -6,7 +6,7 @@
 		padding: 5px;
 		background-color: rgb(65, 64, 64);
 		color: aliceblue;
-min-height: 100px;
+ 
 	}
 </style>
 <textarea id="t">
@@ -18,7 +18,7 @@ Bandagens = Bateria +8
 
 </textarea>
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
