--- a/sigs/Outlast2.html
+++ b/sigs/Outlast2.html
@@ -10,7 +10,7 @@
 	}
 </style>
 <textarea id="t">
-Baterias
+Baterias:
 ?? 00 00 00 08 00 00 00 ?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 80 3E 00 00 00 00 
 
 Bandagens = Bateria +8
