--- a/sigs/GTASA Definitive Edition.html
+++ b/sigs/GTASA Definitive Edition.html
@@ -10,12 +10,13 @@
 	}
 </style>
 <textarea id="t">
+Waypoint Coord
 X:	SanAndreas.exe+522C688
 Y:	SanAndreas.exe+522C688+4
 Z:	SanAndreas.exe+4EA9508
 </textarea>
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
