--- a/sigs/The Forest.html
+++ b/sigs/The Forest.html
@@ -11,7 +11,7 @@
 </style>
 <textarea id="t">
 
-Biscoito
+Biscoito:
 ?  00 00 00 0F 00 00 00 00 00 00 00 ?  ?  ?  ?  00 00 00 00 ?  ?  00 00 ?  00 00 00 ?  00 00 00 00 00 00 00 ?  ? ? ? 00 00 00 00 00 
 
 Cocas
@@ -38,7 +38,7 @@ Caveiras:       Biscoito -78
 Tartaruga: 	Biscoito -288
 </textarea>
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
