--- a/c/obterDataHora.html
+++ b/c/obterDataHora.html
@@ -17,7 +17,7 @@
 	}
 </textarea>
 <script>
-	setTimeout(() => {//'obterDataHora carregou')
+	setInterval(() => {//'obterDataHora carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
