--- a/lua/sleep.html
+++ b/lua/sleep.html
@@ -16,7 +16,7 @@ function Sleep(seg)
 end   
 </textarea> 
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height='auto'
 	document.getElementById('t').style.height=(document.getElementById('t').scrollHeight+20)+'px'
 	}, 1000);
