--- a/c/DrawSquare.html
+++ b/c/DrawSquare.html
@@ -25,7 +25,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'DrawSquare carregou')
+	setInterval(() => {//'DrawSquare carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
