--- a/c/Joaat.html
+++ b/c/Joaat.html
@@ -30,7 +30,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'Joaat carregou')
+	setInterval(() => {//'Joaat carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
