--- a/c/LerIni.html
+++ b/c/LerIni.html
@@ -75,7 +75,7 @@
 	
 </textarea>
 <script>
-	setTimeout(() => {//'LerIni carregou')
+	setInterval(() => {//'LerIni carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
