--- a/c/NicolasCage.html
+++ b/c/NicolasCage.html
@@ -42,7 +42,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'NicolasCage carregou')
+	setInterval(() => {//'NicolasCage carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
