--- a/c/NomeGPU.html
+++ b/c/NomeGPU.html
@@ -27,7 +27,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'NomeGPU carregou')
+	setInterval(() => {//'NomeGPU carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
