--- a/c/ObterInfoRede.html
+++ b/c/ObterInfoRede.html
@@ -26,7 +26,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'ObterInfoRede carregou')
+	setInterval(() => {//'ObterInfoRede carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
