--- a/c/ObterMemoriaRAM.html
+++ b/c/ObterMemoriaRAM.html
@@ -27,7 +27,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'ObterMemoriaRAM carregou')
+	setInterval(() => {//'ObterMemoriaRAM carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
