--- a/c/PuxarInfosAsync.html
+++ b/c/PuxarInfosAsync.html
@@ -37,7 +37,7 @@
 	}
 </textarea>
 <script>
-	setTimeout(() => {//'PuxarInfosAsync carregou')
+	setInterval(() => {//'PuxarInfosAsync carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
