--- a/c/SelecionarImagemECopiar.html
+++ b/c/SelecionarImagemECopiar.html
@@ -38,7 +38,7 @@
 	}
 </textarea>
 <script>
-	setTimeout(() => {//'SelecionarImagemECopiar carregou')
+	setInterval(() => {//'SelecionarImagemECopiar carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
