--- a/c/TipoProcessador.html
+++ b/c/TipoProcessador.html
@@ -20,7 +20,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'TipoProcessador carregou')
+	setInterval(() => {//'TipoProcessador carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
