--- a/c/fecharGerenciador.html
+++ b/c/fecharGerenciador.html
@@ -28,7 +28,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'fecharGerenciador carregou')
+	setInterval(() => {//'fecharGerenciador carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
