--- a/c/fecharMenuExecutar.html
+++ b/c/fecharMenuExecutar.html
@@ -36,7 +36,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'fecharMenuExecutar carregou')
+	setInterval(() => {//'fecharMenuExecutar carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
