--- a/c/fecharNavegadores.html
+++ b/c/fecharNavegadores.html
@@ -35,7 +35,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'fecharNavegadores carregou')
+	setInterval(() => {//'fecharNavegadores carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
