--- a/c/getData.html
+++ b/c/getData.html
@@ -42,7 +42,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'getData carregou')
+	setInterval(() => {//'getData carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
