--- a/c/getPcNome.html
+++ b/c/getPcNome.html
@@ -16,7 +16,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'getPcNome carregou')
+	setInterval(() => {//'getPcNome carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
