--- a/c/hdTotalFreeSpace.html
+++ b/c/hdTotalFreeSpace.html
@@ -20,7 +20,7 @@
 	}
 </textarea>
 <script>
-	setTimeout(() => {//'hdTotalFreeSpace carregou')
+	setInterval(() => {//'hdTotalFreeSpace carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
