--- a/c/obterArquivos.html
+++ b/c/obterArquivos.html
@@ -19,7 +19,7 @@
 	}
 </textarea>
 <script>
-	setTimeout(() => {//'obterArquivos carregou')
+	setInterval(() => {//'obterArquivos carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
