--- a/c/posicaoMouse.html
+++ b/c/posicaoMouse.html
@@ -18,7 +18,7 @@
 	}
 </textarea>
 <script>
-	setTimeout(() => {//' posicaoMouse carregou')
+	setInterval(() => {//' posicaoMouse carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
