--- a/c/simularTeclado.html
+++ b/c/simularTeclado.html
@@ -37,7 +37,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'simularTeclado carregou')
+	setInterval(() => {//'simularTeclado carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
