--- a/js/ValidarTelefone.html
+++ b/js/ValidarTelefone.html
@@ -21,7 +21,7 @@
 	}
 </textarea>
 <script>
-	setTimeout(() => {//'ValidarTelefone carregou')
+	setInterval(() => {//'ValidarTelefone carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 		
