--- a/js/cripto.html
+++ b/js/cripto.html
@@ -43,7 +43,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
