--- a/js/sexymsg.html
+++ b/js/sexymsg.html
@@ -33,7 +33,7 @@
             placa.style.top = tops + 'px';
             const topBackup = tops + 10;
             tops = (tops + 10) + placa.offsetHeight;
-            setTimeout(() => {
+            setInterval(() => {
                 placa.remove();
                 tops = topBackup;
                 numMsg--;
@@ -42,7 +42,7 @@
     }
 </textarea>
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height = 'auto'
 		document.getElementById('t').style.height = (document.getElementById('t').scrollHeight+20) + 'px'
 	}, 1000);
