--- a/lua/criarArquivo.html
+++ b/lua/criarArquivo.html
@@ -22,7 +22,7 @@ local function criarArquivo(caminho, nomeArquivo)
 end
 </textarea> 
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height='auto'
 	document.getElementById('t').style.height=(document.getElementById('t').scrollHeight+20)+'px'
 	}, 1000);
