--- a/lua/criarPasta.html
+++ b/lua/criarPasta.html
@@ -16,7 +16,7 @@ local function criarPasta(caminho)
 end    
 </textarea> 
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height='auto'
 	document.getElementById('t').style.height=(document.getElementById('t').scrollHeight+20)+'px'
 	}, 1000);
