--- a/lua/lerArquivoLinhaALinha.html
+++ b/lua/lerArquivoLinhaALinha.html
@@ -35,7 +35,7 @@ function lerArquivoLinhaALinha(arq)
 end   
 </textarea> 
 <script>
-    setTimeout(() => {//'--------- carregou')
+    setInterval(() => {//'--------- carregou')
         document.getElementById('t').style.height='auto'
     document.getElementById('t').style.height=(document.getElementById('t').scrollHeight+20)+'px'
     }, 1000);
