--- a/lua/substituirPalavra.html
+++ b/lua/substituirPalavra.html
@@ -17,7 +17,7 @@ function substituirPalavra(texto, palavraAntiga, palavraNova)
 end
 </textarea> 
 <script>
-	setTimeout(() => {//'--------- carregou')
+	setInterval(() => {//'--------- carregou')
 		document.getElementById('t').style.height='auto'
 	document.getElementById('t').style.height=(document.getElementById('t').scrollHeight+20)+'px'
 	}, 1000);
