--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
 
 
     const menus = [
-        ['C++', 'Titulo C++ 1', 'artigo2 C++'],
-        ['C++', 'Titulo C++ 2', 'artigo2 C++'],
-        ['C++', 'Titulo C++ 3', 'artigo3 C++'],
+        ['C++', 'Hash Joaat', 'cpp/joaat.html'], 
 
         ['C#', 'Altura e Largura do Monitor', 'c/telaSize.html'],
         ['C#', 'Obter a posicao do mouse', 'c/posicaoMouse.html'],
