--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
 
     const menus = [
         ['C++', 'Hash Joaat', 'cpp/joaat.html'], 
+        ['C++', 'Ler/Escrever arquivos INI', 'cpp/ini.html'], 
+        ['C++', 'Ler TXT com caractere separador', 'cpp/lerTXTcomSeparador.html'], 
+        ['C++', 'Ler TXT linha a linha', 'cpp/lerLinhaaLinha.html'], 
+        ['C++', 'Ler TXT com colunas', 'cpp/LerTXT_Colunas.html'], 
+        ['C++', 'Listar Arquivos de uma Pasta', 'cpp/ListarArquivos_Pasta.html'], 
+          
 
         ['C#', 'Altura e Largura do Monitor', 'c/telaSize.html'],
         ['C#', 'Obter a posicao do mouse', 'c/posicaoMouse.html'],
