--- a/cpp/lerLinhaaLinha.html
+++ b/cpp/lerLinhaaLinha.html
@@ -10,7 +10,17 @@
 	}
 </style>
 <textarea id="t">
-
+vector<string> LerTXT(string arquivo)
+{
+	std::ifstream file(arquivo);
+	std::string line;
+	std::vector<std::string> lines;
+	while (std::getline(file, line)) {
+		lines.push_back(line);
+	}
+	file.close();
+	return lines;
+}
 </textarea>
 <script>
 	setInterval(() => {//'--------- carregou')
