--- a/cpp/Reverse_INTs.html
+++ b/cpp/Reverse_INTs.html
@@ -6,16 +6,21 @@
 		padding: 5px;
 		background-color: rgb(65, 64, 64);
 		color: aliceblue;
- 
+
 	}
 </style>
 <textarea id="t">
-Baterias:
-?? 00 00 00 08 00 00 00 ?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 80 3E 00 00 00 00 
-
-Bandagens: (Bateria +8)
-?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 
-
+	int Reverse_INTs(int n)
+	{
+		int reverse = 0;
+		while (n != 0)
+		{
+			reverse = reverse * 10;
+			reverse = reverse + n % 10;
+			n = n / 10;
+		}
+		return reverse;
+	}
 </textarea>
 <script>
 	setInterval(() => {//'--------- carregou')
