--- a/cpp/XOR2.html
+++ b/cpp/XOR2.html
@@ -6,16 +6,26 @@
 		padding: 5px;
 		background-color: rgb(65, 64, 64);
 		color: aliceblue;
- 
+
 	}
 </style>
 <textarea id="t">
-Baterias:
-?? 00 00 00 08 00 00 00 ?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 80 3E 00 00 00 00 
-
-Bandagens: (Bateria +8)
-?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 
-
+	string Cript(string s)
+	{
+		string rotated{};
+		for (const char& c : s)
+		{
+			rotated += 3 ^ c;
+		} return rotated;
+	}
+	string Decript(string s)
+	{
+		string rotated{};
+		for (const char& c : s)
+		{
+			rotated += 3 ^ c;
+		} return rotated;
+	}
 </textarea>
 <script>
 	setInterval(() => {//'--------- carregou')
