--- a/index.html
+++ b/index.html
@@ -161,6 +161,42 @@
         ['C++', 'Ler TXT linha a linha', 'cpp/lerLinhaaLinha.html'], 
         ['C++', 'Ler TXT com colunas', 'cpp/LerTXT_Colunas.html'], 
         ['C++', 'Listar Arquivos de uma Pasta', 'cpp/ListarArquivos_Pasta.html'], 
+        ['C++', 'Ler TXT com caractere separador de um website', 'cpp/ListaWEB.html'], 
+        ['C++', 'Ler TXT com caractere separador de um website e colunas', 'cpp/ListaWEB_Colunas.html'], 
+        ['C++', 'Remover caractere de uma string', 'cpp/RemoverCaractere.html'], 
+        ['C++', 'Substituir caractere de uma string', 'cpp/SubstituirCaractere.html'], 
+        ['C++', 'Substituir palavra de uma string por outra', 'cpp/SubstituirPalavra.html'], 
+        ['C++', 'Remover espacos de uma string', 'cpp/RemoverEspacos.html'], 
+        ['C++', 'Ver se existe um texto em uma string', 'cpp/SeContemTexto.html'], 
+        ['C++', 'Remover palavra de uma string', 'cpp/RemoverPalavra.html'], 
+        ['C++', 'Inverter Palavra', 'cpp/InverterPalavra.html'], 
+        ['C++', 'Criptografia - XOR', 'cpp/xor.html'], 
+        ['C++', 'Criptografia - Ceasar', 'cpp/Ceasar.html'], 
+        ['C++', 'Criptografia - Hash', 'cpp/Hash.html'],
+        ['C++', 'Criptografia - Rot13', 'cpp/Rot13.html'], 
+        ['C++', 'Criptografia - XOR2 alternativo', 'cpp/XOR2.html'],
+        ['C++', 'Inverter Numeros', 'cpp/Reverse_INTs.html'], 
+        ['C++', 'Inverter Strings', 'cpp/ReverseString.html'],
+        ['C++', 'Sistema de Logs', 'cpp/SistemaDeLogs.html'], 
+        ['C++', 'Ver se arquivo existe', 'cpp/ArquivoExiste.html'],
+        ['C++', 'Deletar Arquivo', 'cpp/DeletarArquivo.html'], 
+        ['C++', 'Criar Arquivo', 'cpp/CriarArquivo.html'], 
+        ['C++', 'Limpar Arquivo', 'cpp/LimparArquivo.html'], 
+        ['C++', 'Criar Diretorio', 'cpp/CriarDiretorio.html'], 
+        ['C++', 'Ver se pasta existe', 'cpp/PastaExiste.html'], 
+        ['C++', 'Checkar Conexao com Internet', 'cpp/CheckConexao.html'], 
+        ['C++', 'Baixar Arquivo', 'cpp/BaixarArquivo.html'], 
+        ['C++', 'Ler MAC', 'cpp/Ler_MAC.html'], 
+        ['C++', 'Simular click do mouse', 'cpp/Clicar_Mouse.html'], 
+        ['C++', 'Verificar se o mouse foi clicado', 'cpp/Ver_se_Clicou_Mouse.html'], 
+        ['C++', 'Mover Mouse', 'cpp/MoverMouse.html'], 
+        ['C++', 'Obter infos da Tela', 'cpp/InfoTela.html'], 
+        ['C++', 'Obter a posição do mouse', 'cpp/getMousePos.html'], 
+        ['C++', 'Data e Hora', 'cpp/DataHora.html'], 
+        ['C++', 'Principais Pastas PC', 'cpp/PastasPC.html'], 
+        ['C++', 'Conversoes de Variaveis', 'cpp/ConversoesVariaveis.html'], 
+        ['C++', 'Includes necessarios para qualquer função daqui', 'cpp/includes.html'], 
+         
           
 
         ['C#', 'Altura e Largura do Monitor', 'c/telaSize.html'],
@@ -199,6 +235,8 @@
         ['C#', 'Tirar Print da Tela', 'c/TirarPrintDaTela.html'],
         ['C#', 'Alerta usando ShowBalloonTip', 'c/ShowBalloonTip.html'],
         ['C#', 'Obter Data e Hora', 'c/obterDataHora.html'],
+        ['C#', 'Ler arquivo linha a linha', 'c/LerTXT.html'],
+        ['C#', 'Ler arquivo com colunas', 'c/LerTXTColunas.html'],
 
 
         ['PHP', 'Titulo PHP 1', 'artigo1 PHP'],
