--- a/cpp/ArquivoExiste.html
+++ b/cpp/ArquivoExiste.html
@@ -6,16 +6,21 @@
 		padding: 5px;
 		background-color: rgb(65, 64, 64);
 		color: aliceblue;
- 
+
 	}
 </style>
 <textarea id="t">
-Baterias:
-?? 00 00 00 08 00 00 00 ?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 80 3E 00 00 00 00 
-
-Bandagens: (Bateria +8)
-?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 
-
+	bool ArquivoExiste(std::string name)
+	{
+		ifstream file(name);
+		if (!file)
+			return false;
+		else
+		{
+			file.close();
+			return true;
+		}
+	}
 </textarea>
 <script>
 	setInterval(() => {//'--------- carregou')
