--- a/cpp/PastaExiste.html
+++ b/cpp/PastaExiste.html
@@ -6,16 +6,17 @@
 		padding: 5px;
 		background-color: rgb(65, 64, 64);
 		color: aliceblue;
- 
+
 	}
 </style>
 <textarea id="t">
-Baterias:
-?? 00 00 00 08 00 00 00 ?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 80 3E 00 00 00 00 
-
-Bandagens: (Bateria +8)
-?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 
-
+	bool PastaExiste(const char* caminho_da_pasta) {
+		struct stat info_pasta;
+		if (stat(caminho_da_pasta, &info_pasta) == 0 && (info_pasta.st_mode & S_IFDIR))
+			return true;
+		else
+			return false;
+	}
 </textarea>
 <script>
 	setInterval(() => {//'--------- carregou')
