--- a/cpp/SubstituirCaractere.html
+++ b/cpp/SubstituirCaractere.html
@@ -6,16 +6,17 @@
 		padding: 5px;
 		background-color: rgb(65, 64, 64);
 		color: aliceblue;
- 
+
 	}
 </style>
 <textarea id="t">
-Baterias:
-?? 00 00 00 08 00 00 00 ?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 80 3E 00 00 00 00 
-
-Bandagens: (Bateria +8)
-?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 
-
+	std::string SubstituirCaractere(std::string palavra, char letraantiga, char letranova)
+	{
+		std::string base = palavra;
+		std::string str = base;
+		str.replace(str.begin(), str.end(), letraantiga, letranova);
+		return str;
+	}
 </textarea>
 <script>
 	setInterval(() => {//'--------- carregou')
