Update GTASA Definitive Edition.html

--- a/sigs/GTASA Definitive Edition.html
+++ b/sigs/GTASA Definitive Edition.html
@@ -14,6 +14,28 @@ Waypoint Coord
 X:	SanAndreas.exe+522C688
 Y:	SanAndreas.exe+522C688+4
 Z:	SanAndreas.exe+4EA9508
+
+Musculatura (float, max 1000) Se colocar valores acima de 100000, o respeito vai ao maximo
+SanAndreas.exe+5073A6C
+
+Resistencia (float max 1000)
+SanAndreas.exe+5073A68
+
+Gordura (float max 1000)"
+SanAndreas.exe+5073A6C-4-4
+
+Tam. barra de Vida (float, max 1000)
+SanAndreas.exe+5073A68+1+1+1+1+1+1+1+1
+
+Waypoint X"
+SanAndreas.exe+522C688
+Waypoint Y"
+SanAndreas.exe+522C688+4
+Waypoint Z"
+SanAndreas.exe+4EA9508
+
+Dinheiro
+SanAndreas.exe+524F0D8
 </textarea>
 <script>
 	setInterval(() => {//'--------- carregou')
