--- a/sigs/Outlast2.html
+++ b/sigs/Outlast2.html
@@ -10,6 +10,18 @@
 	}
 </style>
 <textarea id="t">
+Ponteiros: 
+
+Bandagens
+Outlast2.exe"+020F17C0
+{ 0x2C0,0x370,0x310,0xB8,0x348,0x48,0xC80 + 0x08 }
+
+Baterias
+Outlast2.exe"+020F17C0
+{ 0x2C0,0x370,0x310,0xB8,0x348,0x48,0xC80 }
+
+------------------------------------
+
 Baterias:
 ?? 00 00 00 08 00 00 00 ?? 00 00 00 03 00 00 00 08 00 00 00 08 00 00 00 08 00 00 00 03 00 00 00 03 00 00 00 03 00 00 00 01 00 00 00 9A 99 19 3E 00 00 00 00 00 00 80 3E 00 00 00 00 
 
